fix(Atoms/Label): Change gap-1 to gap-2

--- a/packages/core/src/components/atoms/label/label.component.scss
+++ b/packages/core/src/components/atoms/label/label.component.scss
@@ -1,5 +1,5 @@
 :host {
-    @apply flex gap-1 justify-center items-center px-2 desktop-xs:px-3 rounded;
+    @apply flex gap-2 justify-center items-center px-2 desktop-xs:px-3 rounded;
     @apply h-[1.625rem];
     @apply text-sm font-semibold;
 
